Update golang SDK
